###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_kotlin", version = "1.9.0")

register_toolchains("//:corretto21_jdk_toolchain")  # Register the Amazon Corretto 21 toolchain

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # This line is an example coordinate, you'd copy-paste your actual dependencies here
        # from your build.gradle or pom.xml file.
        "org.jetbrains.kotlin:kotlin-test:1.9.10",
        "org.jetbrains.kotlin:kotlin-test-junit:1.9.10",
        "io.activej:activej-common:5.5",
        "io.activej:activej-http:5.5",
        "io.activej:activej-inject:5.5",
        "io.activej:activej-launcher:5.5",
        "io.activej:activej-launchers-http:5.5",
        "io.activej:activej-promise:5.5",
        "io.jstach:jstachio:1.3.3",
        "org.junit.jupiter:junit-jupiter:5.10.0",
        "org.junit.jupiter:junit-jupiter-api:5.10.0",
        "org.junit.jupiter:junit-jupiter-engine:5.10.0",
        "org.junit.platform:junit-platform-console:1.10.0",
        "org.apache.logging.log4j:log4j-api:2.21.0",
        "org.apache.logging.log4j:log4j-core:2.21.0",
        "org.apache.logging.log4j:log4j-slf4j-impl:2.21.0",
    ],
)
use_repo(maven, "maven")
